--- a/package.json
+++ b/package.json
@@ -3,24 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node --openssl-legacy-provider ./node_modules/.bin/next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.14.16",
+    "@mui/x-date-pickers": "^5.0.20",
+    "axios": "^0.21.4",
+    "chart.js": "^3.5.1",
+    "date-fns": "^2.24.0",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
+    "html-to-draftjs": "^1.5.0",
+    "next": "^11.1.4",
+    "pm2": "^5.2.0",
+    "react": "17.0.2",
+    "react-chartjs-2": "^3.0.5",
+    "react-color": "^2.19.3",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-image-zoom": "^1.3.1",
+    "react-spinners": "^0.11.0",
+    "styled-components": "^5.3.5",
+    "xlsx": "^0.17.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "@types/draft-js": "^0.11.6",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/file-saver": "^2.0.3",
+    "@types/react": "17.0.21",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "typescript": "4.4.3"
   }
 }
