--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node --openssl-legacy-provider ./node_modules/.bin/next dev",
-    "build": "next build",
+    "build": "node --openssl-legacy-provider ./node_modules/.bin/next build",
     "start": "next start",
     "lint": "next lint"
   },
